force-app/main/default/objects/Product_Bundle_Component__c/Product_Bundle_Component__c.object-meta.xml
<CustomObject>
    <label>Product Bundle Component</label>
    <nameField>
        <label>Product Bundle Component Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Bundle Component</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>