force-app/main/default/objects/Product_Bundle_Component__c/fields/Child_Product__c.field-meta.xml
<CustomField>
    <fullName>Child_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Bundle Component (Child Product)</relationshipLabel>
    <relationshipName>Product_Bundle_Component1</relationshipName>
    <type>Lookup</type>
</CustomField>