force-app/main/default/objects/Product_Bundle_Component__c/fields/Default_Action__c.field-meta.xml
<CustomField>
    <fullName>Default_Action__c</fullName>
    <label>Default Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Add</fullName>
            </value>
            <value>
                <fullName>Modify</fullName>
            </value>
            <value>
                <fullName>Delete</fullName>
            </value>
            <value>
                <fullName>No Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>