force-app/main/default/objects/Product_Bundle_Component__c/fields/Default_Qty__c.field-meta.xml
<CustomField>
    <fullName>Default_Qty__c</fullName>
    <label>Default Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>