force-app/main/default/objects/Product_Bundle_Component__c/fields/Parent_Product__c.field-meta.xml
<CustomField>
    <fullName>Parent_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Bundle Component</relationshipLabel>
    <relationshipName>Product_Bundle_Component</relationshipName>
    <type>Lookup</type>
</CustomField>